Worked on Model Training & Hyperparameter Tunning

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 python-dotenv
 pandas
 numpy
-pymango
+pymongo
 certifi
 pymongo[srv]
-pymango
 scikit-learn
-dill
+mlflow
 pyaml
+dagshub
+fastapi
+uvicorn
+python-multipart
 
-#-e .
+
+##-e .
