--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Deploy to EC2 using ECR
 
 on:
-  workflow_dispatch:  # 🟢 Enables manual trigger (Run workflow button)
+  workflow_dispatch:  # 🟢 Manual trigger via "Run workflow" button
 
 permissions:
   id-token: write
@@ -54,7 +54,7 @@ jobs:
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          echo "✅ Image pushed: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
   Continuous-Deployment:
     name: Deploy to EC2
@@ -77,9 +77,9 @@ jobs:
 
       - name: Pull latest image from ECR
         run: |
-          docker pull ${{ secrets.AWS_ECR_LOGIN_URI }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+          docker pull ${{ secrets.AWS_ECR_REPOSITORY_URL }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
 
-      # Optional: stop existing container before running new one
+      # Optional: Stop existing container if already running
       #- name: Stop and remove existing container
       #  run: |
       #    docker ps -q --filter "name=networksecurity" | grep -q . && docker stop networksecurity && docker rm -fv networksecurity
@@ -90,7 +90,7 @@ jobs:
             -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
             -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
             -e AWS_REGION=${{ secrets.AWS_REGION }} \
-            ${{ secrets.AWS_ECR_LOGIN_URI }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+            ${{ secrets.AWS_ECR_REPOSITORY_URL }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
 
       - name: Clean up Docker system
         run: docker system prune -f
