--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,8 @@ jobs:
 
       - name: Pull latest image from ECR
         run: |
-          docker pull ${{ secrets.AWS_ECR_REPOSITORY_URL }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+          docker pull ${{ secrets.AWS_ECR_REPOSITORY_URL }}:latest
+
 
       # Optional: Stop existing container if already running
       #- name: Stop and remove existing container
@@ -86,11 +87,13 @@ jobs:
 
       - name: Run Docker container on port 8120
         run: |
-          docker run -d -p 8120:8120 --ipc="host" --name=networksecurity \
-            -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
-            -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
-            -e AWS_REGION=${{ secrets.AWS_REGION }} \
-            ${{ secrets.AWS_ECR_REPOSITORY_URL }}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
+         docker run -d -p 8120:8120 --ipc="host" --name=networksecurity \
+          -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+          -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+          -e AWS_REGION=${{ secrets.AWS_REGION }} \
+          ${{ secrets.AWS_ECR_REPOSITORY_URL }}:latest
+
 
       - name: Clean up Docker system
         run: docker system prune -f
+
