--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,7 +87,7 @@ jobs:
 
       - name: Run Docker container on port 8120
         run: |
-         docker run -d -p 8120:8120 --ipc="host" --name=networksecurity \
+         docker run -d -p 8120:8120 --ipc="host" --name=phishingattack-network-security \
           -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
           -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
           -e AWS_REGION=${{ secrets.AWS_REGION }} \
@@ -96,4 +96,5 @@ jobs:
 
       - name: Clean up Docker system
         run: docker system prune -f
+
 
